[package]
name = "gh-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql_client = { version = "0.11", features = ["reqwest-blocking"] }
once_cell = "1.12.0"
regex = "1.5.6"
reqwest = {version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive", "serde_derive"] }
